@@ -1,6 +1,5 @@
 package com.leyue.smartcs.knowledge.gateway.impl;
 
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.leyue.smartcs.domain.common.Constants;
 import com.leyue.smartcs.domain.knowledge.gateway.EmbeddingGateway;
 import com.leyue.smartcs.domain.knowledge.gateway.VectorSearchGateway;
@@ -14,6 +13,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -25,7 +25,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Slf4j
 public class EmbeddingGatewayImpl implements EmbeddingGateway {
-    
+
     private final EmbeddingMapper embeddingMapper;
     private final EmbeddingConvertor embeddingConvertor;
     private final VectorSearchGateway vectorSearchGateway;
@@ -33,16 +33,14 @@ public class EmbeddingGatewayImpl implements EmbeddingGateway {
     @Override
     public Embedding save(Embedding embedding) {
         EmbeddingDO embeddingDO = embeddingConvertor.toDataObject(embedding);
-        
+
         if (embeddingDO.getId() == null) {
             // 新增
             embeddingMapper.insert(embeddingDO);
             // 将MySQL生成的ID和向量数据写入RedisSearch
             if (embedding.isValidVector()) {
                 // 单个写入RedisSearch
-                List<Long> ids = List.of(embeddingDO.getId());
-                List<Object> vectors = List.of(embedding.getVector());
-                vectorSearchGateway.batchInsert(Constants.UMBEDDING_INDEX_REDISEARCH, ids, vectors, embedding.getModelType());
+                vectorSearchGateway.batchInsert(Constants.UMBEDDING_INDEX_REDISEARCH, Collections.singletonList(embedding));
             }
         } else {
             // 更新
@@ -50,48 +48,37 @@ public class EmbeddingGatewayImpl implements EmbeddingGateway {
             // 更新向量数据（先删除旧的，再插入新的）
             if (embedding.isValidVector()) {
                 Long id = embeddingDO.getId();
-                vectorSearchGateway.delete(Constants.UMBEDDING_INDEX_REDISEARCH, List.of(id));
-                vectorSearchGateway.batchInsert(Constants.UMBEDDING_INDEX_REDISEARCH, List.of(id), List.of(embedding.getVector()), embedding.getModelType());
+//                vectorSearchGateway.delete(Constants.UMBEDDING_INDEX_REDISEARCH, List.of(id));
+                vectorSearchGateway.batchInsert(Constants.UMBEDDING_INDEX_REDISEARCH, Collections.singletonList(embedding));
             }
         }
-        
+
         return embeddingConvertor.toDomain(embeddingDO);
     }
-    
+
     @Override
     @Transactional(rollbackFor = Exception.class)
     public List<Embedding> saveBatch(List<Embedding> embeddings) {
         if (embeddings == null || embeddings.isEmpty()) {
             return new ArrayList<>();
         }
-        
+
         List<Embedding> result = new ArrayList<>(embeddings.size());
-        
+
         // 批量保存到MySQL，获取自增ID
         for (Embedding embedding : embeddings) {
             result.add(save(embedding));
         }
-        
+
         // 批量写入向量数据到RedisSearch
         try {
             List<Embedding> validEmbeddings = result.stream()
                     .filter(Embedding::isValidVector)
                     .toList();
-            
+
             if (!validEmbeddings.isEmpty()) {
-                List<Long> ids = validEmbeddings.stream()
-                        .map(Embedding::getId)
-                        .collect(Collectors.toList());
-                
-                List<Object> vectors = validEmbeddings.stream()
-                        .map(Embedding::getVector)
-                        .collect(Collectors.toList());
-                
-                // 使用第一个Embedding的模型类型作为批量写入的分区键
-                String modelType = validEmbeddings.get(0).getModelType();
-                
                 // 批量写入向量数据到RedisSearch
-                boolean success = vectorSearchGateway.batchInsert(Constants.UMBEDDING_INDEX_REDISEARCH, ids, vectors, modelType);
+                boolean success = vectorSearchGateway.batchInsert(Constants.UMBEDDING_INDEX_REDISEARCH, embeddings);
                 if (!success) {
                     log.error("批量写入向量数据到RedisSearch失败，Embedding数量: {}", validEmbeddings.size());
                 }
@@ -100,10 +87,10 @@ public class EmbeddingGatewayImpl implements EmbeddingGateway {
             log.error("写入向量数据到RedisSearch时发生错误: {}", e.getMessage(), e);
             // 考虑是否需要回滚MySQL事务
         }
-        
+
         return result;
     }
-    
+
     /**
      * 根据模型类型获取向量维度
      */
@@ -116,25 +103,25 @@ public class EmbeddingGatewayImpl implements EmbeddingGateway {
             default -> 1536; // 默认维度
         };
     }
-    
+
     @Override
     public Optional<Embedding> findById(Long id) {
         EmbeddingDO embeddingDO = embeddingMapper.selectById(id);
         return Optional.ofNullable(embeddingDO).map(embeddingConvertor::toDomain);
     }
-    
+
     @Override
     public List<Embedding> findByDocId(Long docId) {
         List<EmbeddingDO> embeddingDOs = embeddingMapper.findByDocId(docId);
         return embeddingConvertor.toDomainList(embeddingDOs);
     }
-    
+
     @Override
     public Optional<Embedding> findByDocIdAndSectionIdx(Long docId, Integer sectionIdx) {
         EmbeddingDO embeddingDO = embeddingMapper.findByDocIdAndSectionIdx(docId, sectionIdx);
         return Optional.ofNullable(embeddingDO).map(embeddingConvertor::toDomain);
     }
-    
+
     @Override
     @Transactional(rollbackFor = Exception.class)
     public boolean deleteByDocId(Long docId) {
@@ -143,23 +130,23 @@ public class EmbeddingGatewayImpl implements EmbeddingGateway {
         List<Long> embeddingIds = embeddingDOs.stream()
                 .map(EmbeddingDO::getId)
                 .collect(Collectors.toList());
-        
+
         // 从MySQL删除
         int rows = embeddingMapper.deleteByDocId(docId);
-        
+
         // 从RedisSearch删除向量数据
         if (!embeddingIds.isEmpty()) {
             try {
-                boolean success = vectorSearchGateway.delete(Constants.UMBEDDING_INDEX_REDISEARCH, embeddingIds);
-                if (!success) {
-                    log.error("从RedisSearch删除向量数据失败，文档ID: {}, Embedding数量: {}", docId, embeddingIds.size());
-                }
+//                boolean success = vectorSearchGateway.delete(Constants.UMBEDDING_INDEX_REDISEARCH, embeddingIds);
+//                if (!success) {
+//                    log.error("从RedisSearch删除向量数据失败，文档ID: {}, Embedding数量: {}", docId, embeddingIds.size());
+//                }
             } catch (Exception e) {
                 log.error("从RedisSearch删除向量数据时发生错误: {}", e.getMessage(), e);
                 // 考虑是否需要回滚MySQL事务
             }
         }
-        
+
         return rows > 0;
     }
 }
